<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/searchBar"
        android:title="@string/menuButtonSearch"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"
    />
    <item
        android:id="@+id/diceButton"
        android:title="@string/menuButtonDice"
        app:showAsAction="ifRoom"
        android:onClick="rollDice"
    />
    <item
        android:id="@+id/playerButton"
        android:title="@string/menuButtonPlayers"
        app:showAsAction="ifRoom"
        android:onClick="setPlayers"
    />
    <item
        android:id="@+id/lifeButton"
        android:title="@string/menuButtonLife"
        app:showAsAction="ifRoom"
        android:onClick="setLife"
    />
    <item
        android:id="@+id/resetButton"
        android:title="@string/menuButtonReset"
        app:showAsAction="ifRoom"
        android:onClick="reset"
    />
</menu>